# mpi3snp

./: .gitignore  CMakeLists.txt  README.md
manual/: main.tex
src/: AltSNP.h  Arg_parser.cpp  Arg_parser.h  Block.h  BoolVector.cpp  BoolVector.h  CMakeLists.txt  CUDAError.h  ContTable.h  Cpu_node_information.cpp  Cpu_node_information.h  Dataset.cpp  Dataset.h  Definitions.h.in  Distributor.cpp  Distributor.h  Engine.h  EntropySearch.cpp  EntropySearch.cu  EntropySearch.h  GPUContTable.h  GPUEngine.cpp  GPUEngine.cu  GPUEngine.h  GPUMacros.cpp  GPUMacros.h  GPUSNPDistributor.cpp  GPUSNPDistributor.h  GPUSNPDistributorStatic.cpp  GPUSNPDistributorStatic.h  GPUSearchMI.cpp  GPUSearchMI.h  GPUVariables.cu  GPUVariables.h  IOMpi.cpp  IOMpi.h  Individual.h  LineReader.cpp  LineReader.h  Macros.h  (+26 more)
src/cpu/: CPUEngine.cpp  CPUEngine.h  ContTable.h  EntropySearch.cpp  EntropySearch.h  LineReader.cpp  LineReader.h  SNP2.h  SNPDistributor.cpp  SNPDistributor.h  ThreadParams.h  Utils.cpp  Utils.h
src/dataset/: CMakeLists.txt  Dataset.cpp  Dataset.h  Individual.h
src/engine/: CMakeLists.txt
src/engine/cpu/: CMakeLists.txt  CPUEngine.cpp  CPUEngine.h  ContTable.h  EntropySearch.cpp  EntropySearch.h  ThreadError.h  ThreadParams.h
src/engine/distributor/: CMakeLists.txt  Distributor.h
src/engine/gpu/: CMakeLists.txt  CUDAError.cu  CUDAError.h  EntropySearch.cu  EntropySearch.h  GPUContTable.h  GPUEngine.cpp  GPUEngine.cu  GPUEngine.h  Gpu_node_information.cpp  Gpu_node_information.h
src/engine/interface/: CMakeLists.txt  Engine.h  MutualInfo.h
src/engine/search/: CMakeLists.txt  Search.cpp  Search.h
src/gpu/: CUDAError.h  EntropySearch.cu  EntropySearch.h  GPUContTable.h  GPUEngine.cpp  GPUEngine.h  Gpu_node_information.cpp  Gpu_node_information.h  ThreadParams.h
src/utils/: Arg_parser.cpp  CMakeLists.txt  IOMpi.cpp  Statistics.cpp  Statistics.h
tests/: Test300.out  Test300.tfam  Test300.tped
